force-app/main/default/objects/Survey__c/fields/LOI_Telematics__c.field-meta.xml
<CustomField>
    <fullName>LOI_Telematics__c</fullName>
    <label>LOI - Telematics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Interested</fullName>
                <color>#0B6FCE</color>
                <label>Very Interested</label>
            </value>
            <value>
                <fullName>Somewhat Interested</fullName>
                <color>#78C953</color>
                <label>Somewhat Interested</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <color>#FF9900</color>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Not Very Interested</fullName>
                <color>#FF0000</color>
                <label>Not Very Interested</label>
            </value>
            <value>
                <fullName>Not At All Interested</fullName>
                <color>#F3D904</color>
                <label>Not At All Interested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>