force-app/main/default/objects/Survey__c/fields/LOS_Initial_Conversation_with_Sales__c.field-meta.xml
<CustomField>
    <fullName>LOS_Initial_Conversation_with_Sales__c</fullName>
    <label>LOS - Initial Conversation with Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
                <color>#0B6FCE</color>
                <label>Very Satisfied</label>
            </value>
            <value>
                <fullName>Satisfied</fullName>
                <color>#78C953</color>
                <label>Satisfied</label>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
                <color>#FF9900</color>
                <label>Somewhat Satisfied</label>
            </value>
            <value>
                <fullName>Not Satisfied At All</fullName>
                <color>#FF0000</color>
                <label>Not Satisfied At All</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <color>#F3D904</color>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>