force-app/main/default/objects/Survey__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Returns the opp ID associated with the survey</description>
    <inlineHelpText>Returns the opp ID associated with the survey</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>