force-app/main/default/objects/Survey__c/fields/Opt_out_of_marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_of_marketing__c</fullName>
    <formula>IF( 
INCLUDES(Additional_Request__c, &quot;I do not wish to share my name, company&apos;&quot;), TRUE, 
IF (INCLUDES(Additional_Request__c, &quot;No deseo que mi nombre, el de la compañí&quot;), TRUE,
FALSE))</formula>
    <label>Opt out of marketing</label>
    <type>Checkbox</type>
</CustomField>