force-app/main/default/objects/Survey__c/fields/Out_of_Cab_Data_Capture_Solution__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Cab_Data_Capture_Solution__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Out-of-Cab Data Capture Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airclic</fullName>
            </value>
            <value>
                <fullName>Blue Dot</fullName>
            </value>
            <value>
                <fullName>Roadnet MobileCast</fullName>
            </value>
            <value>
                <fullName>Blackbay</fullName>
            </value>
            <value>
                <fullName>None / In-house, Custom</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>