force-app/main/default/objects/Survey__c/fields/Overall_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Service_Experience__c</fullName>
    <label>Overall Service Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>