force-app/main/default/objects/Survey__c/fields/Owner_Operators_CAP__c.field-meta.xml
<CustomField>
    <fullName>Owner_Operators_CAP__c</fullName>
    <description>Used for CAP data collection.</description>
    <label># Owner Operators (CAP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>