force-app/main/default/objects/Survey__c/fields/Primary_ERP_Host_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_ERP_Host_System__c</fullName>
    <label>Primary ERP (Host) System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1C: Enterprise 8</fullName>
            </value>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>Absolute</fullName>
            </value>
            <value>
                <fullName>Activant</fullName>
            </value>
            <value>
                <fullName>ADAM</fullName>
            </value>
            <value>
                <fullName>ADDS</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Advantage Route Systems</fullName>
            </value>
            <value>
                <fullName>AFS</fullName>
            </value>
            <value>
                <fullName>Alliant</fullName>
            </value>
            <value>
                <fullName>Amplexus</fullName>
            </value>
            <value>
                <fullName>Andrews Software, Inc. (Veri-Shred)</fullName>
            </value>
            <value>
                <fullName>Aplus</fullName>
            </value>
            <value>
                <fullName>Apprise</fullName>
            </value>
            <value>
                <fullName>AS 400</fullName>
            </value>
            <value>
                <fullName>Aspen Systems Canopy</fullName>
            </value>
            <value>
                <fullName>AWE</fullName>
            </value>
            <value>
                <fullName>Basis (Coca-Cola)</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>Blue Cow</fullName>
            </value>
            <value>
                <fullName>Bonafide</fullName>
            </value>
            <value>
                <fullName>Bpix</fullName>
            </value>
            <value>
                <fullName>Brightree</fullName>
            </value>
            <value>
                <fullName>Care Centric (MestaMed)</fullName>
            </value>
            <value>
                <fullName>Cargas Systems</fullName>
            </value>
            <value>
                <fullName>CAU</fullName>
            </value>
            <value>
                <fullName>Cerner (Etreby)</fullName>
            </value>
            <value>
                <fullName>Charisma</fullName>
            </value>
            <value>
                <fullName>Computers Unlimited (TIMS)</fullName>
            </value>
            <value>
                <fullName>CPR+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>