force-app/main/default/objects/Survey__c/fields/Primary_Industry_Served_CAP__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry_Served_CAP__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Primary Industry Served (CAP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Commodities</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Construction or Mining</fullName>
            </value>
            <value>
                <fullName>Service Fleet (Services)</fullName>
            </value>
            <value>
                <fullName>Food Products</fullName>
            </value>
            <value>
                <fullName>Petroleum Production &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>General Freight</fullName>
            </value>
            <value>
                <fullName>Hazardous Products</fullName>
            </value>
            <value>
                <fullName>Healthcare Medical</fullName>
            </value>
            <value>
                <fullName>Mfg &amp; Processing</fullName>
            </value>
            <value>
                <fullName>Office Products or Paper</fullName>
            </value>
            <value>
                <fullName>Retail / Wholesale</fullName>
            </value>
            <value>
                <fullName>Waste (Sanitation)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>