force-app/main/default/objects/Survey__c/fields/Primary_Industry_Served_if_other_CAP__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry_Served_if_other_CAP__c</fullName>
    <description>Used for CAP data collection.</description>
    <label>Primary Industry Served (if other)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>