force-app/main/default/objects/Survey__c/fields/Primary_Routing_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_Routing_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Routing System</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>