force-app/main/default/objects/Survey__c/fields/Primary_Vehicle_Type_CAP__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vehicle_Type_CAP__c</fullName>
    <description>Used for CAP data collection.</description>
    <label>Primary Vehicle Type (CAP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dry Van</fullName>
            </value>
            <value>
                <fullName>Straight Trucks</fullName>
            </value>
            <value>
                <fullName>18-Wheeler/Semi-truck</fullName>
            </value>
            <value>
                <fullName>Flat Bed</fullName>
            </value>
            <value>
                <fullName>Pick-Up Trucks (or smaller than straight trucks)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>