force-app/main/default/objects/Survey__c/fields/Project_pse__c.field-meta.xml
<CustomField>
    <fullName>Project_pse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not to be confused with the &quot;Project__c&quot; lookup/table.  This is the project object apart of the PSE Financial Force App.</description>
    <inlineHelpText>Not to be confused with the &quot;Project__c&quot; lookup/table.  This is the project object apart of the PSE Financial Force App.</inlineHelpText>
    <label>Project (pse)</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Surveys (Project (pse))</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>