force-app/main/default/objects/Survey__c/fields/PS_Courteous_and_Professional__c.field-meta.xml
<CustomField>
    <fullName>PS_Courteous_and_Professional__c</fullName>
    <description>The Professional Services consultant was courteous and professional.</description>
    <inlineHelpText>The Professional Services consultant was courteous and professional.</inlineHelpText>
    <label>PS Courteous and Professional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>