force-app/main/default/objects/Survey__c/fields/PS_Had_Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>PS_Had_Product_Knowledge__c</fullName>
    <description>The Professional Services consultant had the product knowledge to successfully accomplish the goals.</description>
    <inlineHelpText>The Professional Services consultant had the product knowledge to successfully accomplish the goals.</inlineHelpText>
    <label>PS Had Product Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>