force-app/main/default/objects/Survey__c/fields/PS_How_Can_We_Improve__c.field-meta.xml
<CustomField>
    <fullName>PS_How_Can_We_Improve__c</fullName>
    <description>If you were unable to rate us all 5&apos;s above, please let us know what we can do to improve your overall experience in the future</description>
    <inlineHelpText>If you were unable to rate us all 5&apos;s above, please let us know what we can do to improve your overall experience in the future</inlineHelpText>
    <label>PS How Can We Improve</label>
    <type>TextArea</type>
</CustomField>