force-app/main/default/objects/Survey__c/fields/PS_Identified_Goals_and_Objectives__c.field-meta.xml
<CustomField>
    <fullName>PS_Identified_Goals_and_Objectives__c</fullName>
    <description>The Professional Services consultant worked with me to successfully identify goals and objectives.</description>
    <inlineHelpText>The Professional Services consultant worked with me to successfully identify goals and objectives.</inlineHelpText>
    <label>PS Identified Goals and Objectives</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>