force-app/main/default/objects/Survey__c/fields/PS_Mgt_request__c.field-meta.xml
<CustomField>
    <fullName>PS_Mgt_request__c</fullName>
    <inlineHelpText>Check if you would like someone from our management team to contact you about your experience</inlineHelpText>
    <label>PS Would like management to contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>