force-app/main/default/objects/Survey__c/fields/PS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>PS_Opt_Out__c</fullName>
    <inlineHelpText>Check if you do not wish your name, company&apos;s name and response for possible inclusion in Omnitracs&apos; marketing publications.</inlineHelpText>
    <label>PS Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not use my information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>