force-app/main/default/objects/Survey__c/fields/PS_Overall_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>PS_Overall_Satisfied__c</fullName>
    <description>Overall, I am satisfied with my experience with Professional Services.</description>
    <inlineHelpText>Overall, I am satisfied with my experience with Professional Services.</inlineHelpText>
    <label>PS Overall Satisfied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>